# zero2prod-lambda

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
tests/: health_check.rs
